--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">LoginAndMaps</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="hello">Hello World, Main!</string>
+    <string name="app_name">AndroidFoursquare</string>
     <string name="latitude_longitude">%1$.8f, %2$.8f</string>
+    <string name="search_title">Search..</string>
     <string name="play_services_available">Google Play services is available</string>
-
+    <string name="enter_text">Search..</string>
 </resources>
