--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="hello">Hello World, Main!</string>
-    <string name="app_name">RewardsApp</string>
+    <string name="app_name">Reward Me</string>
     <string name="latitude_longitude">%1$.8f, %2$.8f</string>
     <string name="search_title">Search..</string>
     <string name="play_services_available">Google Play services is available</string>
